# RemoveAI

./: .gitignore  README.md  pyproject.toml
constraints/: rembg_py312.txt
scripts/: install_mac_linux.sh  install_mac_linux_rembg.sh  install_windows.bat  install_windows.ps1  install_windows_rembg.ps1
src/removebg_batch/: cli.py  gui.py  pipeline.py  providers.py  rembg_engine.py  tiff_io.py  u2net.py  worker.py
src/removebg_batch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
